[metadata]
name = terraformpy
summary = A library and command line tool to supercharge your Terraform configs with the power of Python.
description-file =
  README.rst
author =  Evan Borgstrom
author-email = eborgstrom@nerdwallet.com
home-page = https://github.com/NerdWalletOSS/terraformpy
classifier =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  License :: OSI Approved :: Apache Software License
  Natural Language :: English
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Pre-processors
  Topic :: System :: Systems Administration

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
warning-is-error = 1

[entry_points]
console_scripts =
  terraformpy = terraformpy.cli:main

[pbr]
builder = html,text
skip_authors = True
skip_changelog = True
all_files = 1

[wheel]
universal = 0

[flake8]
exclude =
  *.egg-info,
  *.pyc,
  .cache,
  .eggs
  .git,
  .tox,
  __pycache__,
  build,
  dist,
  docs/source/conf.py,
  tests/fixtures/*
import-order-style = google
max-complexity = 10
max-line-length = 120

[pydocstyle]
match = (?!test_|__).*\.py
ignore = D102,D103,D105,D106,D107,D202,D203,D212,D213

[tool:pytest]
addopts = --disable-pytest-warnings --disable-warnings -n auto
filterwarnings =
    # Ignore deprecation warnings from other libraries that can't be fixed
    ignore::DeprecationWarning:.*schematics






